ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend:
    service: 
      name: artifactory-artifactory-nginx
      port:
        number: 80
  rules:
  - http:
      paths:
        - path: /artifactory-artifactory-nginx/*
          pathType: ImplementationSpecific
          backend:
            service:  
              name: artifactory-artifactory-nginx
              port:
                number: 80
