oldingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
     serviceName: artifactory-artifactory-nginx
     servicePort: 80
  rules:
  - http:
      paths:
        - path: /test/*
          backend:
            serviceName: artifactory-artifactory-nginx
            servicePort: 80
        - path: /*
          backend:
            serviceName: artifactory-artifactory-nginx
            servicePort: 80
